ves-parser/tests/t26_unclosed_string_interpolation_0.test
// unterminated fragment
f"test {1+1";

%output err

error: One of this interpolated string's fragments is missing a closing brace
  ┌─ <source: #77916f69b8a4a59d>:2:1
  │
2 │ f"test {1+1";
  │ ^^^^^^^^^^^^^